packages/flutter_mimir/macos/Classes/frb.h

typedef struct _Dart_Handle* Dart_Handle;
typedef int64_t DartPort;
typedef bool (*DartPostCObjectFnType)(DartPort port_id, void *message);
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_StringList {
  struct wire_uint_8_list **ptr;
  int32_t len;
} wire_StringList;
typedef struct wire_SortBy {
  int32_t tag;
  union SortByKind *kind;
} wire_SortBy;
typedef struct wire_list_sort_by {
  struct wire_SortBy *ptr;
  int32_t len;
} wire_list_sort_by;
typedef union FilterKind {
  struct wire_Filter_Or *Or;
  struct wire_Filter_And *And;
  struct wire_Filter_Not *Not;
  struct wire_Filter_Exists *Exists;
  struct wire_Filter_InValues *InValues;
  struct wire_Filter_GreaterThan *GreaterThan;
  struct wire_Filter_GreaterThanOrEqual *GreaterThanOrEqual;
  struct wire_Filter_Equal *Equal;
  struct wire_Filter_NotEqual *NotEqual;
  struct wire_Filter_LessThan *LessThan;
  struct wire_Filter_LessThanOrEqual *LessThanOrEqual;
  struct wire_Filter_Between *Between;
  struct wire_Filter_IsNull *IsNull;
  struct wire_Filter_IsEmpty *IsEmpty;
} FilterKind;
typedef struct wire_Filter {
  int32_t tag;
  union FilterKind *kind;
} wire_Filter;
typedef struct wire_list_synonyms {
  struct wire_Synonyms *ptr;
  int32_t len;
} wire_list_synonyms;
typedef struct wire_MimirIndexSettings {
  struct wire_uint_8_list *primary_key;
  struct wire_StringList *searchable_fields;
  struct wire_StringList *filterable_fields;
  struct wire_StringList *sortable_fields;
  struct wire_StringList *ranking_rules;
  struct wire_StringList *stop_words;
  struct wire_list_synonyms *synonyms;
  bool typos_enabled;
  uint8_t min_word_size_for_one_typo;
  uint8_t min_word_size_for_two_typos;
  struct wire_StringList *disallow_typos_on_words;
  struct wire_StringList *disallow_typos_on_fields;
} wire_MimirIndexSettings;
void store_dart_post_cobject(DartPostCObjectFnType ptr);
Dart_Handle get_dart_object(uintptr_t ptr);
void drop_dart_object(uintptr_t ptr);
uintptr_t new_dart_opaque(Dart_Handle handle);
intptr_t init_frb_dart_api_dl(void *obj);
void wire_ensure_instance_initialized(int64_t port_,
                                      struct wire_uint_8_list *instance_dir,
                                      struct wire_uint_8_list *tmp_dir);
void wire_ensure_index_initialized(int64_t port_,
                                   struct wire_uint_8_list *instance_dir,
                                   struct wire_uint_8_list *index_name);
void wire_add_documents(int64_t port_,
                        struct wire_uint_8_list *instance_dir,
                        struct wire_uint_8_list *index_name,
                        struct wire_StringList *documents);
void wire_delete_documents(int64_t port_,
                           struct wire_uint_8_list *instance_dir,
                           struct wire_uint_8_list *index_name,
                           struct wire_StringList *document_ids);
void wire_delete_all_documents(int64_t port_,
                               struct wire_uint_8_list *instance_dir,
                               struct wire_uint_8_list *index_name);
void wire_set_documents(int64_t port_,
                        struct wire_uint_8_list *instance_dir,
                        struct wire_uint_8_list *index_name,
                        struct wire_StringList *documents);
void wire_get_document(int64_t port_,
                       struct wire_uint_8_list *instance_dir,
                       struct wire_uint_8_list *index_name,
                       struct wire_uint_8_list *document_id);
void wire_get_all_documents(int64_t port_,
                            struct wire_uint_8_list *instance_dir,
                            struct wire_uint_8_list *index_name);
void wire_search_documents(int64_t port_,
                           struct wire_uint_8_list *instance_dir,
                           struct wire_uint_8_list *index_name,
                           struct wire_uint_8_list *query,
                           uint32_t *limit,
                           uint32_t *offset,
                           struct wire_list_sort_by *sort_criteria,
                           struct wire_Filter *filter,
                           int32_t *matching_strategy);
void wire_number_of_documents(int64_t port_,
                              struct wire_uint_8_list *instance_dir,
                              struct wire_uint_8_list *index_name);
void wire_get_settings(int64_t port_,
                       struct wire_uint_8_list *instance_dir,
                       struct wire_uint_8_list *index_name);
void wire_set_settings(int64_t port_,
                       struct wire_uint_8_list *instance_dir,
                       struct wire_uint_8_list *index_name,
                       struct wire_MimirIndexSettings *settings);